--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "intl-tel-input": "^25.8.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
+    "react-typed": "^2.0.12",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
